--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -92,10 +92,10 @@
     <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
   </listener>
 
-  <error-page>
+<!--  <error-page>
     <exception-type>java.lang.Throwable</exception-type>
     <location>/error.jsp</location>
-  </error-page>
+  </error-page>-->
   <session-config>
     <session-timeout>10080</session-timeout>
   </session-config>
